src/stages/snapshots/lumina2__stages__parse__test__expr__paren_double.snap
---
source: src/stages/parse.rs
expression: ((some_ident))
---
Paren {
    tok_l_paren: LParen,
    expr: Paren(
        Paren {
            tok_l_paren: LParen,
            expr: Variable(
                Variable {
                    variable: Ident(
                        "some_ident",
                    ),
                },
            ),
            tok_r_paren: RParen,
        },
    ),
    tok_r_paren: RParen,
}
