src/stages/snapshots/lumina2__stages__parse__test__expr__paren_literal.snap
---
source: src/stages/parse.rs
expression: (123)
---
Paren {
    tok_l_paren: LParen,
    expr: Literal(
        Integer(
            IntegerLiteral(
                IntLit(
                    123,
                ),
            ),
        ),
    ),
    tok_r_paren: RParen,
}
