src/stages/snapshots/lumina2__stages__parse__test__expr__unary_literal.snap
---
source: src/stages/parse.rs
expression: "!2"
---
Unary {
    op: Not(
        Bang,
    ),
    value: Literal(
        Integer(
            IntegerLiteral(
                IntLit(
                    2,
                ),
            ),
        ),
    ),
}
