src/stages/snapshots/lumina2__stages__parse__test__expr__unary_variable.snap
---
source: src/stages/parse.rs
expression: "-b"
---
Unary {
    op: Negative(
        Minus,
    ),
    value: Variable(
        Variable {
            variable: Ident(
                "b",
            ),
        },
    ),
}
