src/stages/snapshots/lumina2__stages__parse__test__expr__variable_simple.snap
---
source: src/stages/parse.rs
expression: abc
---
Variable {
    variable: Ident(
        "abc",
    ),
}
